[gd_scene load_steps=48 format=3 uid="uid://c81fb1hmeomn0"]

[ext_resource type="Texture2D" uid="uid://b5nexs702spa5" path="res://Assets/Sprites/Enemies/DeerHead Cultist_Test.png" id="1_dh52l"]
[ext_resource type="Script" uid="uid://cvoc0k7fqc1w6" path="res://Scenes/Enemies/deer_head_cultist_1.gd" id="1_ml3n4"]
[ext_resource type="Script" uid="uid://c15nrkp3b0akl" path="res://Scripts/Combat/Hitbox.gd" id="2_ldqwd"]
[ext_resource type="Script" uid="uid://bqkd1gfx0nqjb" path="res://Player/Scripts/combat.gd" id="2_wy58b"]
[ext_resource type="Script" uid="uid://b8rjkhevwopot" path="res://Player/Scripts/resources.gd" id="3_dpgd2"]
[ext_resource type="Script" uid="uid://r64b460xwopc" path="res://Player/Scripts/stats.gd" id="4_1pxsr"]
[ext_resource type="Script" uid="uid://jp44gbkgwwnq" path="res://Scripts/Combat/Hurtbox.gd" id="4_uh8cw"]
[ext_resource type="PackedScene" uid="uid://wpsitkqfnea6" path="res://Scenes/UI_Scenes/enemy_health_bar.tscn" id="8_dpgd2"]
[ext_resource type="AudioStream" uid="uid://tnr5v3eubfbw" path="res://Assets/music/GamePlaySFX/hurt_c_08-102842.mp3" id="9_1pxsr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1pxsr"]
atlas = ExtResource("1_dh52l")
region = Rect2(1888, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_myhph"]
atlas = ExtResource("1_dh52l")
region = Rect2(1984, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_8derw"]
atlas = ExtResource("1_dh52l")
region = Rect2(2080, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m54r"]
atlas = ExtResource("1_dh52l")
region = Rect2(2176, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe83r"]
atlas = ExtResource("1_dh52l")
region = Rect2(2272, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae331"]
atlas = ExtResource("1_dh52l")
region = Rect2(2368, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1fia"]
atlas = ExtResource("1_dh52l")
region = Rect2(2464, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjw7t"]
atlas = ExtResource("1_dh52l")
region = Rect2(0, 0, 32, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm0ln"]
atlas = ExtResource("1_dh52l")
region = Rect2(32, 0, 32, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_loa3i"]
atlas = ExtResource("1_dh52l")
region = Rect2(64, 0, 32, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6ugh"]
atlas = ExtResource("1_dh52l")
region = Rect2(96, 0, 32, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_cljl2"]
atlas = ExtResource("1_dh52l")
region = Rect2(960, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhvhf"]
atlas = ExtResource("1_dh52l")
region = Rect2(1056, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_4704k"]
atlas = ExtResource("1_dh52l")
region = Rect2(1152, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fwbc"]
atlas = ExtResource("1_dh52l")
region = Rect2(1248, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_wthoe"]
atlas = ExtResource("1_dh52l")
region = Rect2(160, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6jb0"]
atlas = ExtResource("1_dh52l")
region = Rect2(256, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7suw"]
atlas = ExtResource("1_dh52l")
region = Rect2(352, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_osnhq"]
atlas = ExtResource("1_dh52l")
region = Rect2(448, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr1uq"]
atlas = ExtResource("1_dh52l")
region = Rect2(544, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_v20yy"]
atlas = ExtResource("1_dh52l")
region = Rect2(640, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukngq"]
atlas = ExtResource("1_dh52l")
region = Rect2(736, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm50n"]
atlas = ExtResource("1_dh52l")
region = Rect2(832, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wkxh"]
atlas = ExtResource("1_dh52l")
region = Rect2(1376, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_m32it"]
atlas = ExtResource("1_dh52l")
region = Rect2(1472, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh3yb"]
atlas = ExtResource("1_dh52l")
region = Rect2(1568, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_v706j"]
atlas = ExtResource("1_dh52l")
region = Rect2(1664, 0, 96, 158)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1uch"]
atlas = ExtResource("1_dh52l")
region = Rect2(1760, 0, 96, 158)

[sub_resource type="SpriteFrames" id="SpriteFrames_xgd8n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pxsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myhph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8derw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m54r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe83r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae331")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1fia")
}],
"loop": true,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjw7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm0ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loa3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6ugh")
}],
"loop": true,
"name": &"idle_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cljl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhvhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4704k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fwbc")
}],
"loop": true,
"name": &"ready_down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wthoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6jb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7suw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osnhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr1uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v20yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukngq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm50n")
}],
"loop": false,
"name": &"set_down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wkxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m32it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh3yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v706j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1uch")
}],
"loop": true,
"name": &"walk_down",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ml3n4"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uh8cw"]
height = 47.5757

[sub_resource type="Animation" id="Animation_lr3if"]
resource_name = "Attack_Handler"
length = 1.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true]
}

[sub_resource type="Animation" id="Animation_1pxsr"]
resource_name = "FlashRed"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Rune_Sentry:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 0, 0.024, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dpgd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Rune_Sentry:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_myhph"]
resource_name = "ShowHealth"
length = 0.2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_myhph"]
_data = {
&"Attack_Handler": SubResource("Animation_lr3if"),
&"FlashRed": SubResource("Animation_1pxsr"),
&"RESET": SubResource("Animation_dpgd2"),
&"ShowHealth": SubResource("Animation_myhph")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1pxsr"]
radius = 172.491

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsb0l"]
radius = 11.0
height = 48.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
light_mask = 3
script = ExtResource("1_ml3n4")

[node name="Combat" type="Node" parent="."]
script = ExtResource("2_wy58b")

[node name="Resources" type="Node" parent="."]
script = ExtResource("3_dpgd2")
max_health = 200
health = 200

[node name="Stats" type="Node" parent="Resources"]
script = ExtResource("4_1pxsr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
position = Vector2(0, 32)
sprite_frames = SubResource("SpriteFrames_xgd8n")
animation = &"attack_down"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.71661e-05, 7.92928)
shape = SubResource("CapsuleShape2D_ml3n4")
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-8, 32)
rotation = -1.57079
scale = Vector2(1, 1.00892)
script = ExtResource("2_ldqwd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1.71661e-05, 7.92928)
shape = SubResource("CapsuleShape2D_uh8cw")
disabled = true
debug_color = Color(0.987877, 0.0948051, 0.119113, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hitbox"]
libraries = {
&"": SubResource("AnimationLibrary_myhph")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_1pxsr")
debug_color = Color(0.665292, 0.511862, 0, 0.42)

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("4_uh8cw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_hsb0l")
debug_color = Color(0, 0.642848, 0.310609, 0.42)

[node name="Enemy_Health Bar" parent="." instance=ExtResource("8_dpgd2")]
offset_left = -31.0
offset_top = -48.0
offset_right = 29.0
offset_bottom = -45.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_myhph")
}

[node name="DeathTimer" type="Timer" parent="."]

[node name="SFX" type="Node2D" parent="."]

[node name="HitSFX" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_1pxsr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
